--- a/src/scss/call-form.scss
+++ b/src/scss/call-form.scss
@@ -2,6 +2,7 @@
   min-width: 320px;
   width: 100%;
   height: 100vh;
+  z-index: 2;
 
   &__mute-area {
     min-width: 320px;
@@ -16,6 +17,7 @@
       margin-left: 16px;
     }
   }
+
   // Сетка от 768px и выше
   @media (min-width: $screen-md) {
     & {
@@ -60,7 +62,7 @@
 
   border-left: 1px solid $link-border;
 
-  position: absolute;
+  position: fixed;
   top: 0px;
   right: 0px;
 
