--- a/src/scss/feedback-form.scss
+++ b/src/scss/feedback-form.scss
@@ -2,6 +2,7 @@
   min-width: 320px;
   width: 100%;
   height: 100vh;
+  z-index: 2;
 
   &__mute-area {
     min-width: 320px;
@@ -60,7 +61,7 @@
 
   border-left: 1px solid $link-border;
 
-  position: absolute;
+  position: fixed;
   top: 0px;
   right: 0px;
 
