--- a/src/scss/main-block-style.scss
+++ b/src/scss/main-block-style.scss
@@ -31,6 +31,7 @@ li {
   justify-content: space-between;
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
 
   //Включение Бокового мобильного меню при рамере 1440px
   @media (min-width: $screen-xl) {
